# poetry-plugin-import

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/poetry_plugin_import/: __init__.py  plugins.py  utils.py
tests/: test_plugins.py  test_utils.py
tests/assets/test_one/: pyproject.toml  requirements.txt
