[tool.poetry]
name = "poetry-plugin-import"
version = "0.2.0"
description = "A Poetry plugin that import dependencies from requirements.txt"
authors = ["Neriberto C.Prado <neriberto@gmail.com>"]
readme = "README.md"

packages = [
    { include = "poetry_plugin_import", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.2.2"
poetry-core = "^1.3.0"
requests = "==2.22.0"
pydantic = "~=1.0.0"
fastapi = ">=0.60.0"
uvicorn = "*"
asyncio = "==3.4.3"
click = "==7.0"
mock = "*"
pytest = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.18"
isort = "^5.10.1"
pytest = "^7.1.3"
mypy = "^0.982"
black = "^22.10.0"
coverage = "^6.5.0"

[tool.poetry.plugins."poetry.application.plugin"]
import = "poetry_plugin_import.plugins:ImportApplicationPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
py_version = 37
profile = "black"
force_single_line = true
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["src", "tests"]
extend_skip = ["setup.py"]
known_third_party = ["poetry.core"]

[tool.pytest.ini_options]
addopts = "-v -s"
testpaths = [
    "tests"
]

[tool.mypy]
files = "src"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]

[tool.coverage.run]
source = ["src"]