[tool.poetry]
name = "poetry-plugin-import"
version = "0.1.2"
description = "A Poetry plugin that import dependencies from requirements.txt"
authors = ["Neriberto C.Prado <neriberto@gmail.com>"]
readme = "README.md"

packages = [
    { include = "poetry_plugin_import", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.5.1 "
poetry-core = "^1.6.1 "

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.18"
isort = "^5.10.1"
pytest = "^7.1.3"
mypy = "^0.982"
coverage = "^6.5.0"
ruff = "^0.0.289"

[tool.poetry.plugins."poetry.application.plugin"]
import = "poetry_plugin_import.plugins:ImportApplicationPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v -s"
testpaths = [
    "tests"
]

[tool.mypy]
files = "src"
mypy_path = "src"
ignore_missing_imports = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]

[tool.coverage.run]
source = ["src"]